add mcts, but rewards are sparse so need heuristics

--- a/supervised_learning.ipynb
+++ b/supervised_learning.ipynb
@@ -145,7 +145,7 @@
       },
       "outputs": [],
       "source": [
-        "test_board = chess.Board(\"r1bqkb1r/pppp1Qpp/2n2n2/4p3/2B1P3/8/PPPP1PPP/RNB1K1NR b KQkq - 0 4\")\n",
+        "test_board = chessGame.Board(\"r1bqkb1r/pppp1Qpp/2n2n2/4p3/2B1P3/8/PPPP1PPP/RNB1K1NR b KQkq - 0 4\")\n",
         "print(test_board)\n",
         "print(board_to_rep(test_board))"
       ]
@@ -240,7 +240,7 @@
         "    game_state_i = np.random.randint(len(moves) - 1)\n",
         "    next_move = moves[game_state_i]\n",
         "    moves = moves[:game_state_i]\n",
-        "    board = chess.Board()\n",
+        "    board = chessGame.Board()\n",
         "    for move in moves:\n",
         "      board.push_san(move)\n",
         "    x = board_to_rep(board)\n",
